[workspace]
members = [
    "crates/yew-preview",
    "examples/yew-preview-example",
]
resolver = "3"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["chriamue"]
license = "MIT"
repository = "https://github.com/chriamue/yew-preview"

[workspace.dependencies]
yew = { version = "0.23" }
