[package]
name = "yew-preview"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A lightweight Rust library for quickly generating interactive component previews in Yew applications."
license.workspace = true
repository.workspace = true

[features]
default = []
testing = ["yew/ssr"]
tests-ignored = []
catalog = ["dep:tokio", "yew/ssr"]
serve = ["catalog", "dep:axum", "dep:tower-http", "dep:serde"]

[dependencies]
yew = { workspace = true }
paste = "1.0"
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlInputElement"] }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
