[features]
preview = []

[package]
name = "yew-preview-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "yew_preview_example"
path = "src/lib.rs"

[dependencies]
yew = { workspace = true, features = ["csr"] }
yew-preview = { path = "../../crates/yew-preview" }
paste = "1.0"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-net = { version = "0.5", features = ["http"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
yew-preview = { path = "../../crates/yew-preview", features = ["testing", "tests-ignored", "serve", "catalog"] }
tokio = { version = "1.0", features = ["macros"] }

[[example]]
name = "serve"
required-features = ["yew-preview/serve"]

[[example]]
name = "catalog"
required-features = ["yew-preview/catalog"]
